# SLIM

./: .gitignore  .gitmodules  BUILD.txt  CMakeLists.txt  Makefile  README.md  buildSLIM.sh  depmkl.sh
conf/: gkbuild.cmake
doxygen/: Cheader.tex  Doxyfile  DoxygenLayout.xml  Makefile  README  documentation.dox
doxygen/html/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_9fd13567edb28327de3006b4dcf05c5e.html  index.html  modules.html  modules.js  navtreedata.js  navtreeindex0.js  pages.html
doxygen/html/d0/de3/: citelist.html
doxygen/html/d6/d3e/: group__slimapi.html  group__slimapi.js
doxygen/html/search/: all_0.js  all_1.js  all_2.js  functions_0.js  groups_0.js  pages_0.js  pages_1.js  searchdata.js
doxygen/latex/: Makefile  bibTmpFile_1.bib  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_9fd13567edb28327de3006b4dcf05c5e.tex  index.tex  modules.tex  refman.aux  refman.bbl  refman.blg  refman.brf  refman.idx  refman.ilg  refman.ind  refman.out  refman.tex  refman.toc
doxygen/latex/d0/de3/: citelist.tex
doxygen/latex/d6/d3e/: group__slimapi.tex
include/: CMakeLists.txt  Makefile  cmake_install.cmake  slim.h
python-package/: UserGuide.ipynb  setup.py
python-package/SLIM/: __init__.py  config.py  core.py
python-package/test/: main.py
src/libslim/: CMakeLists.txt  Makefile  api.c  candidates.c  cd.c  def.h  estimate.c  macros.h  neighbors.c  predict.c  proto.h  pyapi.c  setup.c  slimlib.h  struct.h  timing.c
src/programs/: CMakeLists.txt  TAGS  cmdline_learn.c  cmdline_mselect.c  cmdline_predict.c  def.h  proto.h  slim_learn.c  slim_mselect.c  slim_predict.c  slimbin.h  struct.h
test/: AutomotiveTest.ijv  AutomotiveTrain.ijv  l12file  ml100k-test.csr  ml100k-train.csr  ml100k.cluto
